--- a/packages/quicktype-core/package.json
+++ b/packages/quicktype-core/package.json
@@ -16,8 +16,8 @@
         "@types/urijs": "^1.19.19",
         "browser-or-node": "^2.1.1",
         "collection-utils": "^1.0.1",
-        "is-url": "^1.2.4",
         "cross-fetch": "^3.1.5",
+        "is-url": "^1.2.4",
         "js-base64": "^3.7.5",
         "lodash": "^4.17.21",
         "pako": "^1.0.6",
@@ -31,6 +31,7 @@
     "devDependencies": {
         "@types/browser-or-node": "^1.3.0",
         "@types/js-base64": "^3.3.1",
+        "@types/lodash": "^4.14.191",
         "@types/node": "18.14.0",
         "@types/pako": "^1.0.0",
         "@types/pluralize": "0.0.29",
